--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .home {
   display: grid;
-  grid-template-columns: 45% 55%;
-  background: #fef0f2;
+  grid-template-columns: 40% 60%;
   width: 100%;
   height: 100vh;
 }
@@ -11,6 +10,12 @@
   gap: 1em;
   margin-bottom: 0.5em;
   padding: 0.5em;
+  cursor: pointer;
+   border-radius: 20px;
+   width: 95%;
+}
+.latest:hover {
+  background-color:#fcb6c0;
 }
 .title {
   font-weight: 700;
@@ -28,6 +33,7 @@
   font-weight: 500;
   letter-spacing: -0.3px;
   color: #858585;
+  width: 296px;
 }
 .featured-text {
   font-weight: 400;
@@ -37,7 +43,7 @@
 }
 .latest.checked {
   background: #f8f8f6;
-  border-radius: 20px;
+ 
 }
 .featured.checked {
   color: #1a1a1a;
@@ -54,8 +60,8 @@
   justify-content: center;
   align-items: center;
 }
-.ft-wrap{
-  width: 75%;
+.ft-wrap {
+  width: 85%;
 }
 .title-wrap {
   margin-bottom: 1em;
@@ -66,6 +72,7 @@
   align-items: center;
   gap: 1em;
   padding: 1em;
+  background: #fef0f2;
 }
 .login {
   background: #ffffff;
@@ -73,6 +80,18 @@
   border-radius: 12px;
   padding: 1.5em 3em;
   width: 80%;
+}
+.login-now {
+  color: #1a1a1a;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 37px;
+}
+.inst {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  color: #858585;
 }
 .logtext {
   margin-bottom: 2em;
@@ -89,17 +108,25 @@
   border-radius: 12px;
 }
 .submit {
+  margin-top: 2.4em;
   background: #1cc578;
   border-radius: 40px;
   color: #ffffff;
-  padding:1em 2em;
+  padding: 1em 2em;
   border: none;
+  cursor: pointer;
 }
-.pass-con{
+.submit:hover {
+  transition: 700ms ease-in-out;
+  background: #fcb6c0;
+  color: #1cc578;
+}
+.pass-con {
   position: relative;
 }
-.eye{
+.eye {
   position: absolute;
   right: 1em;
   top: 0.5em;
+  cursor: pointer;
 }
