--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .home {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 .latest {
   display: flex;
@@ -12,17 +9,15 @@
   padding: 0.5em;
   cursor: pointer;
    border-radius: 20px;
-   width: 95%;
 }
 .latest:hover {
   background-color:#fcb6c0;
 }
 .title {
   font-weight: 700;
-  font-size: 32px;
-  line-height: 48px;
   letter-spacing: -0.5px;
   color: #1a1a1a;
+  margin-bottom: 0.5em;
 }
 .sub-title {
   font-weight: 400;
@@ -59,27 +54,33 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 90%;
+  margin: 0 auto 1em;
 }
 .ft-wrap {
-  width: 85%;
+  width: 100%;
 }
 .title-wrap {
   margin-bottom: 1em;
+}
+.icon{
+  padding: 1em 0;
 }
 .col-two {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1em;
-  padding: 1em;
+  padding: 2em 1em;
   background: #fef0f2;
+
 }
 .login {
   background: #ffffff;
   box-shadow: 0px 4px 25px rgba(102, 102, 102, 0.2);
   border-radius: 12px;
-  padding: 1.5em 3em;
-  width: 80%;
+  padding: 1.5em;
+  width: 90%;
 }
 .login-now {
   color: #1a1a1a;
@@ -89,8 +90,6 @@
 }
 .inst {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 25px;
   color: #858585;
 }
 .logtext {
@@ -129,4 +128,41 @@
   right: 1em;
   top: 0.5em;
   cursor: pointer;
+}
+@media (min-width:30rem){
+.home{
+  display: grid;
+  grid-template-rows: 45% 55%;
+}  
+}
+@media (min-width:60rem) {
+  .home {
+    grid-template-columns: 40% 60%;
+    grid-template-rows: none;
+  }
+  .title{
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .col-one {
+    padding: 1em;
+  }
+  .col-two {
+    padding: 1em 2em;
+  }
+  .latest{
+    width: 95%;
+  }
+  .login {
+    width: 70%;
+  }
+  .login-now {
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .inst {
+    font-size: 16px;
+    line-height: 25px;
+  }
+  
 }
